# E-Valuating_Seattle_Charging

./: .gitignore  README.md  all_variables.csv  app_folium.py  app_v2.py  environment.yml  ev_station.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
EValuating_seattle/: app_v1.py  app_v2.py
data/cleaned/: demand_gap.csv  traffic_flow_with_zip.csv
data/processed/: grid_with_features.geojson  recommended_grid_locations.csv
docs/: environment_setup.md  functional_spec.md  technology_review  technology_review.md
examples/: walkthrough_example.md
interactive_map/: app_v2.py  app_v3.py  ml_model.py
tests/: test_app.py  test_data.py  test_edge.py  test_ml_model.py  test_prediction.py  test_ui.py
