[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "E-Valuating_seattle_charging"
version = "0.0.1"
authors = [
  { name="Katelyn Vu" },
  { name="Jason Cao" },
  { name="Roxanne Dimadi" },
  { name="Aiden Tan"}
]
description = " An EV charging station analysis tool"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}